# yamldoc

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: docs.yaml  test.yaml
docs/: index.md
docs/reference/: changelog.md
src/yamldoc/: _templating.py  main.py
tests/: test_output.py
tests/testdata/: input.yaml  out.md
