[metadata]
name = yamldoc
author = Jonathan Jin
author_email = me@jonathanj.in
description = Generate Markdown documentation from YAML Schema.
version = attr: yamldoc.VERSION

[options]
python_requires = >=3.8
install_requires =
    click~=8.1
    Jinja2~=3.1
    PyYAML>=5.3,<5.4
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = templates/*.jinja2

[options.entry_points]
console_scripts =
    yamldoc = yamldoc.main:cmd